fixed column gap in auxiliary search list

--- a/src/scss/components/_auxiliary-search.scss
+++ b/src/scss/components/_auxiliary-search.scss
@@ -56,6 +56,7 @@
     padding: 0.5rem 1rem 1rem 1rem;
     grid-template-columns: repeat(3, 1fr);
     row-gap: 0.5rem;
+    column-gap: 0.5rem;
     max-height: 24.5rem;
     overflow-y: auto;
 
